# weekly-tools

./: .gitignore  DATA_INVENTORY.md  IDEAS.md  README.md
citecheck-인용DOI검증/: LICENSE  README.md  pyproject.toml  사용법.md  실행.command
citecheck-인용DOI검증/citecheck/: __init__.py  cli.py  core.py  parsers.py
citecheck-인용DOI검증/examples/: sample.bib
citecheck-인용DOI검증/tests/: test_core.py  test_parsers.py
factorscan-설문요인분석/: README.md  pyproject.toml  사용법.md  실행.command
factorscan-설문요인분석/examples/: sleep_config.json  sleep_scale.csv
factorscan-설문요인분석/factorscan/: __init__.py  analyze.py  cli.py  dataio.py  efa.py  report.py  stats.py
factorscan-설문요인분석/tests/: test_analyze_cli.py  test_dataio.py  test_efa.py  test_stats.py
logflow-사용자로그분석/: README.md  pyproject.toml  사용법.md  실행.command
logflow-사용자로그분석/examples/: app_events.csv
logflow-사용자로그분석/logflow/: __init__.py  cli.py  dataio.py  metrics.py  report.py  sessionize.py
logflow-사용자로그분석/tests/: test_cli.py  test_dataio.py  test_metrics.py  test_robustness.py  test_sessionize.py
paperforge-논문아이디어발굴기/: .gitignore  README.md  pyproject.toml  사용법.md  실행.command
paperforge-논문아이디어발굴기/examples/: sleep_moa_manifest.json
paperforge-논문아이디어발굴기/paperforge/: __init__.py  cli.py  engine.py  knowledge.py  manifest.py  power.py  report.py
paperforge-논문아이디어발굴기/tests/: test_cli.py  test_engine.py  test_manifest.py  test_power.py
surveyscan-설문응답분석/: README.md  pyproject.toml  사용법.md  실행.command
surveyscan-설문응답분석/examples/: sleep_config.json  sleep_survey.csv
surveyscan-설문응답분석/surveyscan/: __init__.py  analyze.py  cli.py  config.py  dataio.py  report.py  stats.py
surveyscan-설문응답분석/tests/: test_analyze.py  test_cli.py  test_dataio_config.py  test_regressions.py  test_stats.py
