[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logflow"
version = "0.1.0"
description = "사용자 이벤트 로그 CSV 분석: 세션화 · 집계 · DAU/WAU/MAU · 리텐션 · 퍼널 (표준 라이브러리만)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "hyeonjoong", email = "hyeonjoongk@gmail.com" }]
keywords = ["event-log", "analytics", "sessionization", "retention", "funnel", "dau", "wau"]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
logflow = "logflow.cli:main"

[tool.setuptools.packages.find]
include = ["logflow*"]
